[gd_scene load_steps=40 format=3 uid="uid://41qlrkskqwrd"]

[ext_resource type="Script" path="res://scn/chara/ghost.gd" id="1_8reug"]
[ext_resource type="AudioStream" uid="uid://c2piom7w0o7f1" path="res://assets/audio/ghost_death.wav" id="2_ce80h"]
[ext_resource type="Shader" path="res://src/shaders/box_blur.gdshader" id="2_nhods"]
[ext_resource type="Script" path="res://src/sprites/ghost_sprite_2d.gd" id="3_tcp1g"]
[ext_resource type="Script" path="res://src/velocity_component.gd" id="4_yp17h"]
[ext_resource type="Texture2D" uid="uid://c84ojdyg00qn" path="res://assets/radial_gradient.tres" id="5_ua8fr"]
[ext_resource type="Script" path="res://src/photo_sensative.gd" id="6_q1b2v"]
[ext_resource type="Texture2D" uid="uid://ci1e04qchvlj3" path="res://assets/ghost.png" id="7_kcb2h"]
[ext_resource type="AudioStream" uid="uid://b2wdqdfv6nq0v" path="res://assets/audio/ghost_attack.wav" id="8_5ysw7"]
[ext_resource type="Script" path="res://scn/chara/sporadic_sound_emitter.gd" id="9_ic612"]
[ext_resource type="AudioStream" uid="uid://deqjn0h75xruv" path="res://assets/audio/ghost_idle_1.wav" id="10_i2i0b"]
[ext_resource type="AudioStream" uid="uid://dupdsjya5ae8p" path="res://assets/audio/ghost_idle_2.wav" id="11_p6524"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xlqlj"]
shader = ExtResource("2_nhods")
shader_parameter/strength = 3
shader_parameter/alpha = 0.25

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b04kv"]
size = Vector2(26, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_yx78d"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gi33l"]
radius = 19.0263

[sub_resource type="AtlasTexture" id="AtlasTexture_xio3t"]
atlas = ExtResource("7_kcb2h")
region = Rect2(640, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_utsij"]
atlas = ExtResource("7_kcb2h")
region = Rect2(768, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w1sc"]
atlas = ExtResource("7_kcb2h")
region = Rect2(896, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2uma"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1024, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pro5y"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1152, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0ew"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1280, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1duv2"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1408, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ynmx"]
atlas = ExtResource("7_kcb2h")
region = Rect2(0, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8x4m"]
atlas = ExtResource("7_kcb2h")
region = Rect2(128, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_by4l0"]
atlas = ExtResource("7_kcb2h")
region = Rect2(256, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmdj0"]
atlas = ExtResource("7_kcb2h")
region = Rect2(384, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad6wx"]
atlas = ExtResource("7_kcb2h")
region = Rect2(512, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywuo8"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1536, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ywue"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1664, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf3h2"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1792, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_weoqs"]
atlas = ExtResource("7_kcb2h")
region = Rect2(1920, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbthn"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2048, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v87n8"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2176, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t26hf"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2304, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yhjo"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2432, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_odeb8"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2560, 0, 128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4fa3"]
atlas = ExtResource("7_kcb2h")
region = Rect2(2688, 0, 128, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_yw0at"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_xio3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utsij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w1sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2uma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pro5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0ew")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1duv2")
}],
"loop": false,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ynmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8x4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmdj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad6wx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywuo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ywue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf3h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weoqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbthn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v87n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t26hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yhjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odeb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4fa3")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}]

[node name="Ghost" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "velocity_component", "light", "animation", "hitbox", "sfx_attack") groups=["danger"]]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_8reug")
sprite = NodePath("GhostSprite2D")
velocity_component = NodePath("VelocityComponent")
light = NodePath("PointLight2D")
animation = NodePath("AnimatedSprite2D")
hitbox = NodePath("Hitbox")
sfx_attack = NodePath("SFXAttack")
sfx_death = ExtResource("2_ce80h")

[node name="GhostSprite2D" type="Sprite2D" parent="." node_paths=PackedStringArray("animation")]
material = SubResource("ShaderMaterial_xlqlj")
scale = Vector2(0.25, 0.25)
offset = Vector2(0, -128)
script = ExtResource("3_tcp1g")
animation = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_b04kv")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("4_yp17h")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -4)
energy = 0.0
texture = ExtResource("5_ua8fr")
texture_scale = 1.25

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_yx78d")

[node name="PhotoSensative" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 2
collision_mask = 2
script = ExtResource("6_q1b2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhotoSensative"]
shape = SubResource("CircleShape2D_gi33l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_yw0at")
animation = &"attack"
frame = 5
frame_progress = 1.0

[node name="SFXAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5ysw7")
volume_db = -5.0
bus = &"Diegetic"

[node name="SFXIdle" type="AudioStreamPlayer2D" parent="."]
volume_db = -8.0
max_distance = 1000.0
bus = &"Diegetic"
script = ExtResource("9_ic612")
sounds = Array[AudioStream]([ExtResource("10_i2i0b"), ExtResource("11_p6524")])

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
